--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "fabric": "^4.5.1",
+    "sass": "^1.38.0",
+    "sass-loader": "^10.2.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
